# EquationLibrary

./: CMakeLists.txt  README.md  Test.cpp
src/: equationLib.hpp  equationObj.hpp  physic.json  read.cpp  read.hpp  write.cpp  write.hpp
